@@ -150,7 +150,10 @@ def _strip_basic_auth(url):
     password = url_parts.password
     frags = list(url_parts)
     # swap out "user[:pass]@hostname" for "hostname"
-    frags[1] = url_parts.hostname
+    if url_parts.port:
+        frags[1] = "%s:%s" % (url_parts.hostname, url_parts.port)
+    else:
+        frags[1] = url_parts.hostname
     url = parse.urlunsplit(frags)
     return (url, username, password)
 
